[package]
name = "negima"
version = "0.1.0"
edition = "2021"

[dependencies]
pixelast = "0.1.0"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"
serenity = {version = "0.12.2", features = ["framework", "standard_framework"]}
tokio = {version = "1.38.0", features = ["macros", "rt-multi-thread"]}

